logs/fedstream/client5_round100_initdata700/cifar100_resnet_feddyn/launcher_basic/d0.8_c10_e20.log
Running FedStream with: Dir=0.8, Init_Class=10, Epoch=20
Files already downloaded and verified
Files already downloaded and verified
has read
Files already downloaded and verified
Files already downloaded and verified
  0%|          | 0/100 [00:00<?, ?it/s]  1%|          | 1/100 [07:58<13:08:58, 478.16s/it]  2%|▏         | 2/100 [15:56<13:01:06, 478.23s/it]  3%|▎         | 3/100 [23:54<12:52:48, 478.02s/it]  4%|▍         | 4/100 [31:51<12:44:22, 477.74s/it]  5%|▌         | 5/100 [39:46<12:35:05, 476.89s/it]  6%|▌         | 6/100 [47:43<12:26:45, 476.65s/it]  7%|▋         | 7/100 [55:39<12:18:50, 476.68s/it]  8%|▊         | 8/100 [1:03:35<12:10:33, 476.45s/it]  9%|▉         | 9/100 [1:11:33<12:03:26, 476.99s/it] 10%|█         | 10/100 [1:19:29<11:54:49, 476.55s/it] 11%|█         | 11/100 [1:27:24<11:46:14, 476.11s/it] 12%|█▏        | 12/100 [1:35:20<11:38:13, 476.06s/it] 13%|█▎        | 13/100 [1:43:17<11:30:47, 476.41s/it] 14%|█▍        | 14/100 [1:51:12<11:22:05, 475.88s/it] 15%|█▌        | 15/100 [1:59:07<11:13:44, 475.58s/it] 16%|█▌        | 16/100 [2:07:03<11:06:02, 475.75s/it] 17%|█▋        | 17/100 [2:14:59<10:58:18, 475.89s/it] 18%|█▊        | 18/100 [2:22:54<10:49:44, 475.42s/it] 19%|█▉        | 19/100 [2:30:52<10:42:59, 476.28s/it] 20%|██        | 20/100 [2:39:11<10:44:10, 483.13s/it] 21%|██        | 21/100 [2:47:56<10:52:37, 495.66s/it]Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/spawn.py", line 122, in spawn_main
    exitcode = _main(fd, parent_sentinel)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/spawn.py", line 131, in _main
    prepare(preparation_data)
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/spawn.py", line 246, in prepare
    _fixup_main_from_path(data['init_main_from_path'])
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/spawn.py", line 297, in _fixup_main_from_path
    main_content = runpy.run_path(main_path,
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen runpy>", line 291, in run_path
  File "<frozen runpy>", line 98, in _run_module_code
  File "<frozen runpy>", line 88, in _run_code
  File "/home/kemove/lt/FedAlgorithm/alg/FedStream.py", line 14, in <module>
    from FedAvg import Server as FedAvg_Server
  File "/home/kemove/lt/FedAlgorithm/alg/FedAvg.py", line 14, in <module>
    from Clients import Client_Group, run_client_avg
  File "/home/kemove/lt/FedAlgorithm/alg/Clients.py", line 65
    finally:
    ^^^^^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/spawn.py", line 122, in spawn_main
    exitcode = _main(fd, parent_sentinel)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/spawn.py", line 131, in _main
    prepare(preparation_data)
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/spawn.py", line 246, in prepare
    _fixup_main_from_path(data['init_main_from_path'])
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/spawn.py", line 297, in _fixup_main_from_path
    main_content = runpy.run_path(main_path,
                   ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen runpy>", line 291, in run_path
  File "<frozen runpy>", line 98, in _run_module_code
  File "<frozen runpy>", line 88, in _run_code
  File "/home/kemove/lt/FedAlgorithm/alg/FedStream.py", line 14, in <module>
    from FedAvg import Server as FedAvg_Server
  File "/home/kemove/lt/FedAlgorithm/alg/FedAvg.py", line 14, in <module>
    from Clients import Client_Group, run_client_avg
  File "/home/kemove/lt/FedAlgorithm/alg/Clients.py", line 65
    finally:
    ^^^^^^^
SyntaxError: invalid syntax
 21%|██        | 21/100 [2:54:05<10:54:53, 497.39s/it]
Traceback (most recent call last):
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/site-packages/torch/utils/data/dataloader.py", line 1133, in _try_get_data
    data = self._data_queue.get(timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/queues.py", line 113, in get
    if not self._poll(timeout):
           ^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/connection.py", line 257, in poll
    return self._poll(timeout)
           ^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/connection.py", line 440, in _poll
    r = wait([self], timeout)
        ^^^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/multiprocessing/connection.py", line 948, in wait
    ready = selector.select(timeout)
            ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/selectors.py", line 415, in select
    fd_event_list = self._selector.poll(timeout)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/site-packages/torch/utils/data/_utils/signal_handling.py", line 66, in handler
    _error_if_any_worker_fails()
RuntimeError: DataLoader worker (pid 926662) exited unexpectedly with exit code 1. Details are lost due to multiprocessing. Rerunning with num_workers=0 may give better error trace.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/kemove/lt/FedAlgorithm/alg/FedStream.py", line 779, in <module>
    alg.online_train()
  File "/home/kemove/lt/FedAlgorithm/alg/FedStream.py", line 738, in online_train
    global_loss_list, accuracy_list = self.alg.run(
                                      ^^^^^^^^^^^^^
  File "/home/kemove/lt/FedAlgorithm/alg/FedDyn.py", line 134, in run
    ].local_update_dyn(
      ^^^^^^^^^^^^^^^^^
  File "/home/kemove/lt/FedAlgorithm/alg/Clients.py", line 345, in local_update_dyn
    datasize,
        ^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/site-packages/torch/utils/data/dataloader.py", line 631, in __next__
    data = self._next_data()
           ^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/site-packages/torch/utils/data/dataloader.py", line 1329, in _next_data
    idx, data = self._get_data()
                ^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/site-packages/torch/utils/data/dataloader.py", line 1295, in _get_data
    success, data = self._try_get_data()
                    ^^^^^^^^^^^^^^^^^^^^
  File "/home/kemove/anaconda3/envs/test/lib/python3.11/site-packages/torch/utils/data/dataloader.py", line 1146, in _try_get_data
    raise RuntimeError(f'DataLoader worker (pid(s) {pids_str}) exited unexpectedly') from e
RuntimeError: DataLoader worker (pid(s) 926662) exited unexpectedly
